# computer_graphics_final_project

./: CMakeLists.txt
lab2/: box.frag  box.vert  lab2_building.cpp  lab2_skybox.cpp  shadowMap.frag  shadowMap.vert  sky.frag  sky.vert
lab2/render/: shader.cpp  shader.h
